--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev",
+    "dev": "remix dev & sass --watch --style=compressed app/assets/sass/:app/assets/css",
     "compile:sass": "sass --watch --style=compressed app/assets/sass/:app/assets/css",
     "typecheck": "tsc"
   },
@@ -16,16 +16,25 @@
     "@remix-run/node": "^1.16.0",
     "@remix-run/react": "^1.16.0",
     "@remix-run/vercel": "^1.16.0",
+    "@remix-validated-form/with-zod": "^2.0.5",
+    "@types/react-input-mask": "^3.0.2",
     "@vercel/node": "^2.10.3",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^10.12.12",
     "isbot": "^3.6.8",
+    "mongoose": "^7.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
+    "remix-validated-form": "^4.6.11",
+    "zod": "^3.21.4",
+    "zod-form-data": "^2.0.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.16.0",
     "@remix-run/eslint-config": "^1.16.0",
     "@remix-run/serve": "^1.16.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.38.0",
