--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@remix-run/react": "^1.16.0",
     "@remix-run/vercel": "^1.16.0",
     "@remix-validated-form/with-zod": "^2.0.5",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/react-input-mask": "^3.0.2",
     "@vercel/node": "^2.10.3",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^10.12.12",
     "isbot": "^3.6.8",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
